Fix logo letter spacing

--- a/src/app/components/header/header.module.sass
+++ b/src/app/components/header/header.module.sass
@@ -13,7 +13,7 @@
         p
             color: rgba(255, 255, 255, 1)
             font-size: 21px
-            letter-spacing: -2%
+            letter-spacing: -0.02em
 
 .nav
     font-size: 14px
